--- a/blog.html
+++ b/blog.html
@@ -1,19 +1,57 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Blog</title>
 	<link rel="stylesheet" href="home.css">
 </head>
 <body>
-	<div class="logo">
-		<a href="index.html">Sandip</a>
-    </div>
+	
 	<div class="navbar">
+        <div class="logo">
+            <a href="index.html">Sandip</a>
+        </div>
 		<li><a href="index.html">Home</a></li>
 		<li><a href="portfolio.html">Portfolio</a></li>
 		<li><a href="contact.html">Contact</a></li>
-		<li class="active"><a href="blog.html">Blog</a></li>
+		<li><a href="blog.html">Blog</a></li>
 		<li><a href="sitereport.html">Report</a></li>
 	</div>
+    <div class="heading">
+		<h1>Blog</h1>
+        </div>
+	</div>
+    <div class="blog">
+        <div class="start">
+            <h1>Starting Phase</h1>
+            <p>First of all I read all the guide lines of assignment provided from UoN.
+                Then I became confused. How to start my assignment. Then, I made a simple layout on my
+                copy. Then, I started to coding on my laptop according to my layout.
+            </p>
+        </div>
+        <div class="Problem">
+            <h1>Problems</h1>
+            <p>I faced same problems many times that is I forgot to close the open tags.
+            So that my code did not work properly accordingly. And I got panic many time. And
+            main problems I faced on @media screen to make responsive. I feel very hard to make
+            responsive without JS.
+            </p>
+        </div>
+        <div class="learned">
+            <h1>Learnd</h1>
+            <p>
+                I learned from assignment to give proper tags and class. And 
+                to make responsive without using javascript. I also learnd form assignment that is 
+                proper referencing.
+            </p>
+
+        </div>
+
+
+    </div>
+</body>    
+</html>
     
-</body>
+>
