--- a/contact.html
+++ b/contact.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link rel="stylesheet" href="home.css">
 </head>
-<div class="logo">
-    <a href="index.html">Sandip</a>
-</div>
+<body>
+
 <div class="navbar">
+    <div class="logo">
+        <a href="index.html">Sandip</a>
+    </div>
     <li><a href="index.html">Home</a></li>
     <li><a href="portfolio.html">Portfolio</a></li>
     <li><a href="contact.html">Contact</a></li>
     <li><a href="blog.html">Blog</a></li>
     <li><a href="sitereport.html">Report</a></li>
     </div>
+    <div class="heading">
+		<h1>Contact</h1>
+	</div>
 <div class="contact">    
 <div class="form-container">    
 <form>
@@ -31,7 +39,7 @@
 </div>
     message:
   <div class="message">
-    <textarea name="message" id="message" cols="30" rows="5"></textarea>
+    <textarea name="message" id="message" cols="20" rows="5"></textarea>
   </div>
     <input type="submit" name="submit" onclick="alert('successfully submited')">
 </div> 
@@ -44,5 +52,5 @@
     <h4>mobile no: +9779811838948</h4>
     </div>
 </div>    
-    
+</body>   
 </html>
