--- a/index.html
+++ b/index.html
@@ -1,23 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>home page</title>
 	<link rel="stylesheet" href="home.css">
+	<meta charset="utf-8">
+	
+
 </head>
 <body>
-	<div class="logo">
-		<a href="index.html">Sandip</a>
-    </div>
 	<div class="navbar">
-		<li class="active"><a href="index.html">Home</a></li>
+		<div class="logo">
+			<a href="index.html">Sandip</a>
+		</div>
+		<label for="toggle">&#9776;</label>
+		<input type="checkbox" id="toggle">
+		<li><a href="index.html">Home</a></li>
 		<li><a href="portfolio.html">Portfolio</a></li>
 		<li><a href="contact.html">Contact</a></li>
 		<li><a href="blog.html">Blog</a></li>
 		<li><a href="sitereport.html">Report</a></li>
 	</div>
+	<div class="heading">
+		<h1>Home</h1>
+	</div>
 	<div class="container">
 		<h1>Hello! I am Sandip Kumar Sah</h1>
-		<h3>Well-Come to my Web Page</h3>
+		<h3 class="welcome">Well-Come to my Web Page</h3>
 	</div>
 </body>
 </html>
