--- a/portfolio.html
+++ b/portfolio.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="home.css">
 </head>
 <body>
-<div class="logo">
-    <a href="index.html">Sandip</a>
-</div>
+
 <div class="navbar">
+    <div class="logo">
+        <a href="index.html">Sandip</a>
+    </div>
     <li><a href="index.html">Home</a></li>
-    <li class="active"><a href="portfolio.html">Portfolio</a></li>
+    <li><a href="portfolio.html">Portfolio</a></li>
     <li><a href="contact.html">Contact</a></li>
     <li><a href="blog.html">Blog</a></li>
     <li><a href="sitereport.html">Report</a></li>
     </div>
+    <div class="heading">
+		<h1>Portfolio</h1>
+	</div>
     <div class="portfolio">
    <div class="portfo-container" >
        <div class="image">
