--- a/blog.html
+++ b/blog.html
@@ -13,11 +13,15 @@
         <div class="logo">
             <a href="index.html">Sandip</a>
         </div>
+        <label for="toggle">&#9776;</label>
+		<input type="checkbox" id="toggle">
+        <ul>
 		<li><a href="index.html">Home</a></li>
 		<li><a href="portfolio.html">Portfolio</a></li>
 		<li><a href="contact.html">Contact</a></li>
 		<li><a href="blog.html">Blog</a></li>
 		<li><a href="sitereport.html">Report</a></li>
+    </ul>
 	</div>
     <div class="heading">
 		<h1>Blog</h1>
