--- a/portfolio.html
+++ b/portfolio.html
@@ -13,11 +13,15 @@
     <div class="logo">
         <a href="index.html">Sandip</a>
     </div>
+    <label for="toggle">&#9776;</label>
+		<input type="checkbox" id="toggle">
+    <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="portfolio.html">Portfolio</a></li>
     <li><a href="contact.html">Contact</a></li>
     <li><a href="blog.html">Blog</a></li>
     <li><a href="sitereport.html">Report</a></li>
+   </ul>
     </div>
     <div class="heading">
 		<h1>Portfolio</h1>
@@ -25,7 +29,7 @@
     <div class="portfolio">
    <div class="portfo-container" >
        <div class="image">
-       <img src="image.png" alt="image place holder">
+       <img src="#" alt="image place holder">
     </div>
         <h4>Name:Sandip Kumar Sah</h4>
         <h4>Student number:22425921</h4>
