--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,7 +26,7 @@
     <div class="heading">
 		<h1>Blog</h1>
         </div>
-	</div>
+	
     <div class="blog">
         <div class="start">
             <h1>Starting Phase</h1>
@@ -36,7 +36,7 @@
             </p>
         </div>
         <div class="Problem">
-            <h1>Problems</h1>
+            <h1>Problem</h1>
             <p>I faced same problems many times that is I forgot to close the open tags.
             So that my code did not work properly accordingly. And I got panic many time. And
             main problems I faced on @media screen to make responsive. I feel very hard to make
@@ -58,4 +58,3 @@
 </body>    
 </html>
     
->
