--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -27,20 +27,24 @@
 		<h1>Portfolio</h1>
 	</div>
     <div class="portfolio">
-   <div class="portfo-container" >
+   <div class="portfo-container">
        <div class="image">
        <img src="#" alt="image place holder">
     </div>
+    <div class="info">
         <h4>Name:Sandip Kumar Sah</h4>
         <h4>Student number:22425921</h4>
         <h4>Address:Jeetpur-Simara Sub_metropolitan 15 Bara Nepal</h4>
+    </div>
         </div>
     <div class="skill-container">
         <h4>My Skills</h4>
-        <h5>Khowledge of html 60%</h5>
+        <h5>Knowledge of html 60%</h5>
         <h5>Khowledge of css 50%</h5>
         <h5>Cisco configutation 80%</h5>
         <h5>C programming language 25%</h5>
+        <h5>Analog CC camera installation 100%</h5>
+        <h5>Solving of rubik's cube with in 2 minutes</h5>
         
     </div>  
     </div>  
