--- a/sitereport.html
+++ b/sitereport.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>home page</title>
+	<title>Site Report</title>
 	<link rel="stylesheet" href="home.css">
 </head>
 <body>
@@ -23,8 +23,84 @@
 		<li><a href="sitereport.html">Report</a></li>
 	</ul>
     </div>
+    <div class="heading">
+		<h1>Site Report</h1>
+	</div>
+	<div class="report">
+    <section>
+		<h2>My Learning Experience</h2>
+		<p>I am already familier with programming language. But I had not done html, css programming
+			language. when I enrolled in the course there is a subject of web development then I started 
+			to learn html and css from w3school. And I learned more from w3school. At the time of begning, 
+			I had not more tags, class etc. sometimes my code was not working by not using proper tags and class.
+			We have also got perfect teacher for web development. He also guides us individually.
+			He teaches us each and every lines and word related to web. He teaches us accroding to slides 
+			proveded by the NILE.
+		</p>
+	</section>
+	<section>
+		<h2>Course Module</h2>
+		First of all I want say that, in few times we got a chance of learning more about html and css.
+		And I am very thankfull. By the help of NILE slides and w3school, I learnd about using
+		 proper tags and class. And In the provided slides, there are each and every thing about html and 
+		 css. There is prorer discuss about box model in which there is about padding, margin etc.
+		 There is also discuss about to make the site responsive and there is also about annimation.
+		</section>
+	<section>
+		<h2>Assignment</h2>
+		<p> As I received my assignment on 12th feb 2022, I became nervous, how to start. And 
+			there are many rules and regulations to follow. And there are many forbidden to do.
+			And I saw many site on the net. So that, on 14th feb 2022 I made my webpage layout design on my copy first.
+			Then, on 15th feb 2022 I started coding on my laptop. And first I made Navbar, then I started slowly. And 
+			I faced many problems at the time of coding. There was a main problem at the time of making 
+			responsive hamburger icon. I used many colors on the navbar randomly, then finally I choosed purple
+			on the navbar. In the Same way I choosed aqua color in the background and gray on the body. The 
+			combination of that colors make my webpage fit and fine.
+			And successfully I finished my assignment on 4th march 2022.
+		</p>
+	</section>
+	<section>
+		<div>
+		<h2>Referencing</h2>
+         <h4>For web page layout</h4>
+		 sah, B. (2021)About Gbajar. Available at:
+		 http://about.gbajar.com
+		 (researched: 14 feb 2022)
+        </div>
+         <div>
+			 <h4>For grid layout</h4>
+			 Traversy, Media. (2017) CSS Grid Layout Crash Course. Available at:
+			 https://youtu.be/jV8B24rSN5o (accessed: 2o feb 2022)
+		 </div>
+		 <div>
+			 <h4>For responsive Hamburger icon</h4>
+			 Caler, Edwards. (2017) Responsive Menu With Media Queries (Checkbox Trick) - Using Only CSS3. Available at:
+			 https://youtu.be/xMTs8tAapnQ (accessed: 22 feb 2022)
+		 </div>
+		 <div>
+			 <h4>For Heading annimation</h4>
+			 CodeWithHarry. (2020) CSS Tutorial: Creating Animations & Keyframes | Web Development Tutorials #36. Available at:
+			 https://youtu.be/jiK6Mf-ILSg (accessed:28 feb 2022)
+		 </div>
+	</section>
+</div>
 
-    
+
+
+<section>
+	<div class="validate-image">
+	<h2>Screenshot of all validation pages</h2>
+	<div class="image">
+	<img src="home.png" alt="Home page">
+	<img src="portfolio.png" alt="Portfolio">
+	<img src="contact.png" alt="contact">
+	<img src="blog.png" alt="Blog">
+	<img src="sitereport.png" alt="report">
+	<img src="css.png" alt="all css">
+	</div>
+	</div>  
+</section>
+
 </body>    
 </html>
     
