--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,9 +26,12 @@
     <div class="heading">
 		<h1>Contact</h1>
 	</div>
-<div class="contact">    
-<div class="form-container">    
-<form>
+<div class="contact">
+
+<form>    
+
+    <div class="form-container">    
+
     First Name:
     <div class="F-name">
     <input type="text" name="First Name" >
@@ -44,7 +47,7 @@
     message:
   <div class="message">
     <textarea name="message" id="message" cols="20" rows="5"></textarea>
-  </div>
+</div>
     <input type="submit" name="submit" onclick="alert('successfully submited')">
 </div> 
 
