--- a/sitereport.html
+++ b/sitereport.html
@@ -62,6 +62,14 @@
 	<section>
 		<div>
 		<h2>Referencing</h2>
+		<div>
+			<h4>I learned html and css from:</h4>
+			NILE's slides and
+			<div>
+				w3schools. (1999-2022) Html and css. Availabel at:
+				https://www.w3schools.com/
+			</div>
+		</div>
          <h4>For web page layout</h4>
 		 sah, B. (2021)About Gbajar. Available at:
 		 http://about.gbajar.com
