--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
 	</div>
 <div class="contact">
 
-<form>    
+<form action="https://mail.google.com/" method="submit">    
 
     <div class="form-container">    
 
